build/new: have circleci trip deploys; update docs; display current rev.

--- a/views/index.erb
+++ b/views/index.erb
@@ -28,7 +28,7 @@
     <div class="loadingScreen">
       <div class="loadingMessage">
         <h1>loading <strong>odk build</strong><sup>BETA</sup></h1>
-        <p>version 0.85</p>
+        <p>version 0.90</p>
         <div class="loadingBar">please wait.</div>
         <p class="status">loading application...</p>
       </div>
@@ -339,6 +339,9 @@
         <p>
           Found a bug? Have a feature request?
           <a href="http://github.com/clint-tseng/odkbuild/issues" rel="external">Report it</a>.
+        </p>
+        <p>
+          You are running <%= AssetManager.build_rev %>
         </p>
       </div>
       <div class="modalButtonContainer">
